<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Look at my GUI:</string>
    <string name="ButtonText">CLICK HERE</string>
    <string name="check_out">Check this out!</string>
    <string name="switches"> Switch on / off</string>
    <string name="text_fill">Type here</string>
    <string name="toast_message">Here is more information</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="checkbox1">Checkbox is </string>
    <string name="undo">undo</string>
    <string name="restore">Restored!</string>
    <string name="switch1">Switch is </string>


    <string name="email">Enter your email address： </string>
    <string name="password">Type your password： </string>
    <string name="text_fill_email">Type email here </string>
    <string name="ButtonText1">LOGIN</string>

    <string name="label">Your profile</string>
    <string name="name">Your name: </string>
    <string name="email1">Your email: </string>
    <string name="pic">Your picture: </string>
    <string name="text_fill_name1">Enter your name</string>
    <string name="text_fill_email1">Enter your email</string>

    <string name="Go_to_chat">Go to chat</string>
    <string name="btn_chat_message_send">SEND</string>
    <string name="et_chat_message">Type here </string>
    <string name="btn_chat_message_receive">RECEIVE</string>

    <string name="delete_title">Do you want to delete this?</string>
    <string name="delete_message1">The selected row is: </string>
    <string name="delete_message2">The database id:</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="Go_to_weather">Go to WeatherForecast</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Message Here</string>
    <string name="hello_blank_fragment2">ID= </string>


    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
