<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:textSize="30dp"
        android:layout_alignParentTop="true"/>


    <Button
        android:id="@+id/button"
        android:layout_below="@id/text"
        android:layout_alignParentLeft="true"
        android:gravity="fill"
        android:layout_weight ="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_below="@id/text"
        android:layout_toRightOf="@id/button"
        android:gravity="fill"
        android:layout_weight ="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_out"
        android:layout_marginLeft="130dp"
        android:checked="false"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_weight="1"
        android:gravity="fill"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/simpleSwitch"
        android:layout_below="@id/button"
        android:layout_toEndOf="@id/imageButton"
        android:gravity="fill"
        android:layout_weight ="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switches"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/EditText"
        android:layout_below="@id/imageButton"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/text_fill"
        android:gravity="left"
        android:inputType="textPersonName"/>
</RelativeLayout>