<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:textSize="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_weight="1"
        android:gravity="fill"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/ButtonText"
        android:layout_columnSpan="1"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_weight="1"
        android:gravity="fill"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_out" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_weight="1"
        android:gravity="fill"
        android:src="@drawable/flag" />
    <Switch
        android:id="@+id/simpleSwitch"
        android:gravity="fill"
        android:layout_weight ="1"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switches"/>

    <EditText
        android:id="@+id/EditText"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/text_fill"
        android:gravity="left"
        android:inputType="textPersonName"/>
</GridLayout>