<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:textSize="30dp"
    app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <Button
        android:id="@+id/button"
        android:gravity="fill"
        android:layout_weight ="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText" />

    <CheckBox
        android:id="@+id/checkbox"
        android:gravity="fill"
        android:layout_weight ="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_out" />

</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:gravity="fill"
            android:src="@drawable/flag" />

        <Switch
            android:id="@+id/simpleSwitch"
            android:gravity="fill"
            android:layout_weight ="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switches"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/EditText"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/text_fill"
            android:gravity="left"/>
    </LinearLayout>

</LinearLayout>